[package]
name = "el"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
oracle = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
anyhow = "1.0"
indicatif = "0.17"
flate2 = "1.0"
