[package]
name = "el"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
oracle = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
anyhow = "1.0"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
